--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,30 @@ section.hero    {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
   }
 
+i:hover {
+    transform: scale(1.2); /* Scale the icon up by 20% on hover */
+}
+
+.image-link {
+    display: inline-block;
+}
+
+.project-image-container {
+    overflow: hidden; /* Ensure the image doesn't overflow the container */
+}
+
+.card-img-top {
+    width: 100%; /* Ensure the image fills the container */
+    height: 100%; /* Ensure the image fills the container */
+    transition: transform 0.3s; /* Add transition for smooth zoom effect */
+}
+
+.project-image-container:hover .card-img-top {
+    transform: scale(1.3); /* Zoom the image by increasing its size */
+    cursor: pointer; /* Change cursor to indicate interactivity */
+}
+
+
 @media (min-width: 600px) {
     
     .main-container {
@@ -101,5 +125,9 @@ section.hero    {
     .tech-icons {
         margin-top: 20px;
 
+    }
+
+    button:hover    {
+        transform: scale(1.2); /* Scale the icon up by 20% on hover */
     }
 }
