--- a/styles.css
+++ b/styles.css
@@ -38,12 +38,22 @@ section.hero    {
     justify-content: space-between;
 }
 
+.animated-text-1    {
+    color: rgb(191, 199, 207);
+}
+
+.animated-text-2    {
+    color: rgb(115, 131, 145);
+}
+
 .animated-text-container {
     align-content: center;
     font-size: clamp(32px, min(4vw, 2em), 2em);
     text-align: center;
     padding-left: 5%;
     padding-right: 5%;
+    margin-top: 12%;
+    margin-bottom: 10%;
     height: 35%;
     display: flex;
     flex-direction: column;
@@ -94,6 +104,10 @@ i:hover {
     cursor: pointer; /* Change cursor to indicate interactivity */
 }
 
+.contact    {
+    background-color:aliceblue !important;
+    margin-bottom: 10px !important;
+}
 
 @media (min-width: 600px) {
     
@@ -117,19 +131,23 @@ i:hover {
         margin: auto;
     }
 
+    .animated-text-1    {
+        font-size: clamp(64px, min(4vw, 2em), 2em);
+    }
     .animated-text-container {
         display: block;
         flex-direction:row;
         align-content: center;
         justify-content: center;
-        font-size: clamp(16px, min(4vw, 2em), 2em);
+        flex-shrink: 1;
         text-align: center;
         color: azure;
-        margin-top: 10%;
+        margin-top: 5%;
+        margin-bottom: 5%;
     }
 
     .tech-icons {
-        margin-top: 20px;
+        margin-top: 5%;
 
     }
 
