--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,5 @@
 :root {
-    --color-primary-dark: #0F0F0F;
-    --color-primary: #1C1C1C;
-    --color-secondary: #1c6fec;
-    --color-accent: #007ecc;
-    --color-frontendev: rgb(224, 14, 84);
-    --color-name: rgb(53, 53, 54);
-    --color-main-text:#d3cdcd;
+
 }
 
 .play-regular {
@@ -20,39 +14,31 @@
     font-style: normal;
   }
 
-body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: var(--color-primary-dark);
-}
+  html {
+    background-color: #363737;
+  }
 
 section.hero    {
     height: 100vh;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    background-color: #363737;
+
 }
 
 .main-container {
-    background-image: url(images/vecteezy_dark-and-matte-dynamic-metallic-texture-background_45678723.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
+    background-color: #202121;
     min-height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border: 1px solid white;
 }
 
-.animated-text-1    {
-    padding-top: 10%;
-    color: var(--color-name);
-    text-shadow: 1px 1px #fffcfc;
-}
-
-.animated-text-2    {
-    color: var(--color-frontendev);
-    text-shadow: 1px 1px #444343;
-}
-
-.animated-text-container {
+.name-title-container {
     align-content: center;
     font-size: clamp(32px, min(4vw, 2em), 2em);
     text-align: center;
@@ -64,6 +50,7 @@ section.hero    {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    color: #f3fbff;
 }
 
 .tech-icons {
@@ -148,6 +135,7 @@ i:hover {
         background-size: cover;
         min-height: 100%;
         height: fit-content;
+        width: 80%;
     }
 
     .accordion  {
@@ -162,7 +150,7 @@ i:hover {
     .animated-text-1    {
         font-size: clamp(64px, min(4vw, 2em), 2em);
     }
-    .animated-text-container {
+    .name-title-container {
         display: block;
         flex-direction:row;
         align-content: center;
