--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,20 @@
-:root {
-
-}
-
 .play-regular {
     font-family: "Play", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
+}
+
 .play-bold {
     font-family: "Play", sans-serif;
     font-weight: 700;
     font-style: normal;
-  }
+}
 
-  html {
+html {
     background-color: #363737;
-  }
+}
 
-section.hero    {
+section.hero {
     height: 100vh;
     display: flex;
     align-items: center;
@@ -58,11 +54,11 @@ section.hero    {
     text-align: center;
     padding-left: 5%;
     padding-right: 5%;
-    color:#fffcfc;
+    color: #fffcfc;
     text-shadow: 2px 1px #444343;
 }
 
-.accordion-button   {
+.accordion-button {
     font-family: "Play", sans-serif;
     font-weight: 200;
     font-style: normal;
@@ -70,18 +66,21 @@ section.hero    {
 }
 
 .accordion-item {
-    margin: 10px; /* Cambia el valor según lo que necesites */
-    padding: 0px; /* Cambia el valor según lo que necesites */
+    margin: 10px;
+    /* Cambia el valor según lo que necesites */
+    padding: 0px;
+    /* Cambia el valor según lo que necesites */
 
 }
 
 :focus {
     outline: 0 !important;
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
-  }
+}
 
 i:hover {
-    transform: scale(1.2); /* Scale the icon up by 20% on hover */
+    transform: scale(1.2);
+    /* Scale the icon up by 20% on hover */
 }
 
 .image-link {
@@ -89,48 +88,56 @@ i:hover {
 }
 
 .project-image-container {
-    overflow: hidden; /* Ensure the image doesn't overflow the container */
+    overflow: hidden;
+    /* Ensure the image doesn't overflow the container */
 }
 
 .card-img-top {
-    width: 100%; /* Ensure the image fills the container */
-    height: 100%; /* Ensure the image fills the container */
-    transition: transform 0.3s; /* Add transition for smooth zoom effect */
+    width: 100%;
+    /* Ensure the image fills the container */
+    height: 100%;
+    /* Ensure the image fills the container */
+    transition: transform 0.3s;
+    /* Add transition for smooth zoom effect */
 }
 
 .project-image-container:hover .card-img-top {
-    transform: scale(1.3); /* Zoom the image by increasing its size */
-    cursor: pointer; /* Change cursor to indicate interactivity */
+    transform: scale(1.3);
+    /* Zoom the image by increasing its size */
+    cursor: pointer;
+    /* Change cursor to indicate interactivity */
 }
 
-.contact    {
+.contact {
     margin-bottom: 10px !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.contact-icons  {
+.contact-icons {
     display: flex;
     justify-content: center;
-    
+
 }
 
 .social {
     background-image: linear-gradient(to bottom, rgb(0, 0, 0), transparent) !important;
     display: flex;
     justify-content: flex-end;
-    align-items:flex-start;
+    align-items: flex-start;
     width: 100vw;
 }
 
 @media (min-width: 600px) {
-    
+
     .main-container {
         display: flex;
         flex-direction: column;
-        justify-content: space-around; /* Center vertically */
-        align-items: center; /* Center horizontally */
+        justify-content: space-around;
+        /* Center vertically */
+        align-items: center;
+        /* Center horizontally */
         background-repeat: repeat;
         background-size: cover;
         min-height: 100%;
@@ -138,21 +145,22 @@ i:hover {
         width: 80%;
     }
 
-    .accordion  {
+    .accordion {
         width: 70%;
     }
 
-    .accordion-header   {
+    .accordion-header {
         width: fit-content;
         margin: auto;
     }
 
-    .animated-text-1    {
+    .animated-text-1 {
         font-size: clamp(64px, min(4vw, 2em), 2em);
     }
+
     .name-title-container {
         display: block;
-        flex-direction:row;
+        flex-direction: row;
         align-content: center;
         justify-content: center;
         flex-shrink: 1;
@@ -162,7 +170,8 @@ i:hover {
         margin-bottom: 5%;
     }
 
-    button:hover    {
-        transform: scale(1.1); /* Scale the icon up by 20% on hover */
+    button:hover {
+        transform: scale(1.1);
+        /* Scale the icon up by 20% on hover */
     }
 }
