--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,158 @@
-.play-regular {
+/* Fonts */
+
+.saira-condensed-thin {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .saira-condensed-extralight {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+  }
+  
+  .saira-condensed-light {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .saira-condensed-regular {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .saira-condensed-medium {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .saira-condensed-semibold {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  }
+  
+  .saira-condensed-bold {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .saira-condensed-extrabold {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
+  
+  .saira-condensed-black {
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+
+  .play-regular {
     font-family: "Play", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .play-bold {
+    font-family: "Play", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .roboto-light {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .roboto-medium {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .roboto-black {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .roboto-thin-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .roboto-light-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .roboto-regular-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .roboto-medium-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .roboto-black-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  
+
+p {
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
-.play-bold {
-    font-family: "Play", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
+/* End of Fonts */
 
 html {
     background-color: #363737;
 }
 
 section.hero {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     align-content: center;
@@ -30,7 +167,7 @@ section.hero {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     border: 1px solid white;
 }
 
@@ -42,15 +179,14 @@ section.hero {
     padding-right: 5%;
     margin-top: 12%;
     margin-bottom: 10%;
-    height: 35%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     color: #f3fbff;
 }
 
 .tech-icons {
-    font-size: clamp(36px, min(4vw, 2em), 2em);
+    font-size: clamp(24px, min(4vw, 2em), 2em);
     text-align: center;
     padding-left: 5%;
     padding-right: 5%;
@@ -129,6 +265,10 @@ i:hover {
     width: 100vw;
 }
 
+.card-body {
+    min-height: 200px !important;
+}
+
 @media (min-width: 600px) {
 
     .main-container {
@@ -138,8 +278,6 @@ i:hover {
         /* Center vertically */
         align-items: center;
         /* Center horizontally */
-        background-repeat: repeat;
-        background-size: cover;
         min-height: 100%;
         height: fit-content;
         width: 80%;
@@ -173,5 +311,9 @@ i:hover {
     button:hover {
         transform: scale(1.1);
         /* Scale the icon up by 20% on hover */
+    }
+
+    .accordion-flush {
+        width: 90% !important;
     }
 }
