--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ p {
 
 html {
     background-color: #363737;
+
 }
 
 section.hero {
@@ -158,7 +159,7 @@ section.hero {
     align-content: center;
     justify-content: center;
     background-color: #363737;
-
+    background-image: url("/images/gray_sierpinski_square_fractal_background_seamless.jpg") !important;
 }
 
 .main-container {
@@ -167,7 +168,7 @@ section.hero {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 1px solid white;
 }
 
@@ -268,6 +269,39 @@ i:hover {
 .card-body {
     min-height: 200px !important;
 }
+
+/* Tooltips */
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Position above the icon */
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+
+
 
 @media (min-width: 600px) {
 
