--- a/styles.css
+++ b/styles.css
@@ -1,354 +1,404 @@
 /* Fonts */
 
 .saira-condensed-thin {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .saira-condensed-extralight {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-  }
-  
-  .saira-condensed-light {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .saira-condensed-regular {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .saira-condensed-medium {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .saira-condensed-semibold {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  .saira-condensed-bold {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .saira-condensed-extrabold {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-  }
-  
-  .saira-condensed-black {
-    font-family: "Saira Condensed", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
 
-  .play-regular {
-    font-family: "Play", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .play-bold {
-    font-family: "Play", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .roboto-thin {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  .roboto-thin-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-  }
-  
-  .roboto-light-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .roboto-regular-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .roboto-medium-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .roboto-bold-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-  
-  .roboto-black-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-  }
-  
+.saira-condensed-extralight {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.saira-condensed-light {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.saira-condensed-regular {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.saira-condensed-medium {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.saira-condensed-semibold {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.saira-condensed-bold {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.saira-condensed-extrabold {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.saira-condensed-black {
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.play-regular {
+  font-family: "Play", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.play-bold {
+  font-family: "Play", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.roboto-thin {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.roboto-light {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.roboto-regular {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-medium {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.roboto-bold {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.roboto-black {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.roboto-thin-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.roboto-light-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.roboto-regular-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.roboto-medium-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.roboto-bold-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.roboto-black-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
 
 p {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 /* End of Fonts */
 
 html {
-    background-color: #363737;
-
+  background-color: #363737;
 }
 
 section.hero {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    background-color: #363737;
-    background-image: url("/images/gray_sierpinski_square_fractal_background_seamless.jpg") !important;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  background-color: #08080b;
 }
 
 .main-container {
-    background-color: #16171b;
-    min-height: 85vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border: 1px solid white;
+  background-color: #010208;
+  min-height: 85vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid rgb(147, 37, 37);
+  opacity: 0.9;
 }
 
 .name-title-container {
-    align-content: center;
-    font-size: clamp(32px, min(4vw, 5em), 2em);
-    text-align: center;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-top: 5%;
-    margin-bottom: 10%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #f3fbff;
+  font-size: clamp(32px, min(4vw, 5em), 2em);
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-top: 5%;
+  margin-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #f3fbff;
 }
 
 .tech-icons {
-    font-size: clamp(24px, min(4vw, 2em), 2em);
-    text-align: center;
-    padding-left: 5%;
-    padding-right: 5%;
-    color: #fffcfc;
-    text-shadow: 2px 1px #444343;
+  font-size: clamp(24px, min(4vw, 2em), 2em);
+  text-align: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  color: #fffcfc;
+  text-shadow: 2px 1px #444343;
+}
+
+.accordion-body {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .accordion-button {
-    font-family: "Play", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-
+  font-family: "Play", sans-serif;
+  font-weight: 200;
+  font-style: normal;
 }
 
 .accordion-header .accordion-button {
-    font-size: 30px !important;
+  font-size: 30px !important;
 }
 
 .accordion-item {
-    margin: 10px;
-    /* Cambia el valor según lo que necesites */
-    padding: 0px;
-    /* Cambia el valor según lo que necesites */
-
+  margin: 10px;
+  /* Cambia el valor según lo que necesites */
+  padding: 0px;
+  /* Cambia el valor según lo que necesites */
 }
 
 :focus {
-    outline: 0 !important;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+  outline: 0 !important;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
 i:hover {
-    transform: scale(1.2);
-    /* Scale the icon up by 20% on hover */
+  transform: scale(1.2);
+  /* Scale the icon up by 20% on hover */
 }
 
 .image-link {
-    display: inline-block;
+  display: inline-block;
 }
 
 .project-image-container {
-    overflow: hidden;
-    /* Ensure the image doesn't overflow the container */
+  overflow: hidden;
+  /* Ensure the image doesn't overflow the container */
 }
 
 .card-img-top {
-    width: 100%;
-    /* Ensure the image fills the container */
-    height: 100%;
-    /* Ensure the image fills the container */
-    transition: transform 0.3s;
-    /* Add transition for smooth zoom effect */
+  width: 100%;
+  /* Ensure the image fills the container */
+  height: 100%;
+  /* Ensure the image fills the container */
+  transition: transform 0.3s;
+  /* Add transition for smooth zoom effect */
 }
 
 .project-image-container:hover .card-img-top {
-    transform: scale(1.3);
-    /* Zoom the image by increasing its size */
-    cursor: pointer;
-    /* Change cursor to indicate interactivity */
+  transform: scale(1.3);
+  /* Zoom the image by increasing its size */
+  cursor: pointer;
+  /* Change cursor to indicate interactivity */
 }
 
 .contact {
-    margin-bottom: 10px !important;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  margin-bottom: 10px !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contact-icons {
-    display: flex;
-    justify-content: center;
-
+  display: flex;
+  justify-content: center;
 }
 
 .social {
-    background-image: linear-gradient(to bottom, rgb(0, 0, 0), transparent) !important;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    width: 100vw;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(0, 0, 0),
+    transparent
+  ) !important;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  width: 100vw;
+  padding-right: 3%;
 }
 
 .card-body {
-    min-height: 200px !important;
+  min-height: 200px !important;
 }
 
 /* Tooltips */
 
 .tooltip {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
 }
 
 .tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    border-radius: 5px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%; /* Position above the icon */
-    left: 50%;
-    margin-left: -60px;
-    opacity: 0;
-    transition: opacity 0.3s;
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%; /* Position above the icon */
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 .tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
+  visibility: visible;
+  opacity: 1;
 }
 
 @media (min-width: 600px) {
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /* Center vertically */
+    align-items: center;
+    /* Center horizontally */
+    min-height: 100%;
+    height: fit-content;
+    width: 95%;
+  }
 
-    .main-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        /* Center vertically */
-        align-items: center;
-        /* Center horizontally */
-        min-height: 100%;
-        height: fit-content;
-        width: 50%;
-    }
+  .accordion {
+    width: 60%;
+  }
 
-    .accordion {
-        width: 70%;
-    }
+  .accordion-header {
+    width: fit-content;
+    margin: auto;
+  }
 
-    .accordion-header {
-        width: fit-content;
-        margin: auto;
-    }
+  .animated-text-1 {
+    font-size: clamp(64px, min(4vw, 2em), 2em);
+  }
 
-    .animated-text-1 {
-        font-size: clamp(64px, min(4vw, 2em), 2em);
-    }
+  .name-title-container {
+    display: block;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    flex-shrink: 1;
+    color: rgb(165, 163, 163);
+  }
 
-    .name-title-container {
-        display: block;
-        flex-direction: row;
-        align-content: center;
-        justify-content: center;
-        flex-shrink: 1;
-        text-align: center;
-        color: azure;
+  .name-title-container > h1 {
+    color: rgb(165, 163, 163);
+  }
 
-    }
+  .name-title-container > h2 {
+    color: rgb(213, 43, 43);
+  }
 
-    button:hover {
-        transform: scale(1.1);
-        /* Scale the icon up by 20% on hover */
-    }
+  button:hover {
+    transform: scale(1.1);
+    /* Scale the icon up by 20% on hover */
+  }
 
-    .accordion-flush {
-        width: 90% !important;
-        margin-bottom: 6vh;
-    }
+  .accordion-flush {
+    width: 90% !important;
+    margin-bottom: 6vh;
+  }
+
+  .name-title-container > h1 {
+    font-size: 9.5rem !important;
+  }
+
+  .about-me > p {
+    max-width: 40% !important;
+    padding: 12px;
+    border: 1px solid;
+  }
+
+  .projects > p {
+    max-width: 40% !important;
+    padding: 12px;
+    border: 1px solid;
+  }
+
+  .accordion-body > p {
+    max-width: 50%;
+  }
+
+  .accordion-body {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+.name-title-container > h1 {
+  font-size: 2.5rem;
+}
+
+.name-title-container > h1 {
+  color: rgb(165, 163, 163);
+}
+
+.name-title-container > h2 {
+  color: rgb(213, 43, 43);
+}
+
+button {
+  border: 1px solid white !important;
+  width: 200px !important;
 }
