--- a/styles.css
+++ b/styles.css
@@ -402,3 +402,10 @@ button {
   border: 1px solid white !important;
   width: 200px !important;
 }
+
+.card {
+  background-color: transparent!important;
+  color: white!important;
+  border: 1px solid rgb(106, 103, 103)!important;
+  height: 550px!important
+}
